Editing code and improving machine learning model

--- a/code/01 EDA.ipynb
+++ b/code/01 EDA.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +368,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
        "(1526659, 22)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +585,7 @@
        "4         0       1                       NaN  "
       ]
      },
-     "execution_count": 71,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +619,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
        "0"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +682,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +712,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +749,7 @@
        "0"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +771,7 @@
        "0"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -989,7 +989,7 @@
        "max    1.000000e+00               4750.000000  "
       ]
      },
-     "execution_count": 78,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1000,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1160,7 +1160,7 @@
        "4         0       1                       NaN  "
       ]
      },
-     "execution_count": 79,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1171,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1180,7 +1180,7 @@
        "(1526659, 14)"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1200,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1209,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1498,7 +1498,7 @@
        "[50000 rows x 14 columns]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1509,7 +1509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1518,7 +1518,7 @@
        "(50000, 14)"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1529,7 +1529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1575,7 +1575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1602,7 +1602,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1651,7 +1651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1662,7 +1662,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1682,7 +1682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1691,7 +1691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1700,7 +1700,7 @@
        "(50000, 13)"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1729,7 +1729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1738,7 +1738,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1765,7 +1765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1774,7 +1774,7 @@
        "Text(0, 0.5, 'cntincpaycont9m_3716944L (Payments in the past 9 months)')"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1805,7 +1805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1814,7 +1814,7 @@
        "Text(0, 0.5, 'avgdbddpdlast3m_4187120P (During the last 3 months)')"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1840,12 +1840,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From this scatterplot we found there to be a high correlation between the two columns. In the data wrangling portion of our project we intend to drop the column looking at only 3 months and keep the column looking at 24 months which encompasses a higher view of time with payments. "
+    "From this scatterplot we found there to be a high correlation between the two columns. In the data wrangling portion of our project we intend to drop the column looking at only 3 months and keep the column looking at 24 months which encompasses a higher view of time with payments. This is because there was a high correlation between the two column variable and we decided to drop one because one column was basically predicting another which creates noise. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1854,7 +1854,7 @@
        "Text(0, 0.5, 'maininc_215A (Clients primary income amount)')"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1885,41 +1885,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "sampled_df.to_csv('../data/processed/cleaned_sampled_df.csv', index = False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We identified there were high correlation between two column variable and we decided to drop one because one column was basically predicting another which creates noise. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "target\n",
-       "0    1478665\n",
-       "1      47994\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 96,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "new_df['target'].value_counts()"
    ]
   }
  ],
