--- a/code/02 Data Wrangling.ipynb
+++ b/code/02 Data Wrangling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
        "4                     -12.0  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
        "(50000, 13)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
        "4        90       0  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
        "(50000, 11)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +408,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +421,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have decided that we would be dropping the columns \"date_decision, MONTH and WEEK_NUM\" this is because this was originally provided to us as part of our train base. We don't think those columns are relevant for our machine learning model to try to predict on. Just having the target column is more than enough. We don't need the date, month and week of when the decision was made on whether someone defaulted or not."
+    "We have decided that we would be dropping the columns \"date_decision, MONTH, case_id and WEEK_NUM\" this is because this was originally provided to us as part of our train base. We don't think those columns are relevant for our machine learning model to try to predict on. Just having the target column is more than enough. We don't need the date, month and week of when the decision was made on whether someone defaulted or not."
    ]
   },
   {
@@ -433,16 +433,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_df.drop(columns= ['date_decision', 'MONTH', 'case_id'], axis = 1, inplace = True)"
+    "new_df.drop(columns= ['date_decision', 'MONTH', 'case_id', 'WEEK_NUM'], axis = 1, inplace = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,6 @@
        "      <th>downpmt_116A</th>\n",
        "      <th>avgdbddpdlast24m_3658932P</th>\n",
        "      <th>empl_employedtotal_800L</th>\n",
-       "      <th>WEEK_NUM</th>\n",
        "      <th>target</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -485,7 +484,6 @@
        "      <td>0.0</td>\n",
        "      <td>-5.0</td>\n",
        "      <td>Missing</td>\n",
-       "      <td>87</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -496,7 +494,6 @@
        "      <td>3000.0</td>\n",
        "      <td>-5.0</td>\n",
        "      <td>Missing</td>\n",
-       "      <td>71</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -507,7 +504,6 @@
        "      <td>0.0</td>\n",
        "      <td>-5.0</td>\n",
        "      <td>Missing</td>\n",
-       "      <td>87</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -518,7 +514,6 @@
        "      <td>0.0</td>\n",
        "      <td>-6.0</td>\n",
        "      <td>Missing</td>\n",
-       "      <td>30</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -529,7 +524,6 @@
        "      <td>0.0</td>\n",
        "      <td>-8.0</td>\n",
        "      <td>Missing</td>\n",
-       "      <td>90</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -544,15 +538,15 @@
        "3     3141.4001                12.0       20000.0           0.0   \n",
        "4     6327.6000                14.0       40000.0           0.0   \n",
        "\n",
-       "   avgdbddpdlast24m_3658932P empl_employedtotal_800L  WEEK_NUM  target  \n",
-       "0                       -5.0                 Missing        87       0  \n",
-       "1                       -5.0                 Missing        71       0  \n",
-       "2                       -5.0                 Missing        87       0  \n",
-       "3                       -6.0                 Missing        30       0  \n",
-       "4                       -8.0                 Missing        90       0  "
+       "   avgdbddpdlast24m_3658932P empl_employedtotal_800L  target  \n",
+       "0                       -5.0                 Missing       0  \n",
+       "1                       -5.0                 Missing       0  \n",
+       "2                       -5.0                 Missing       0  \n",
+       "3                       -6.0                 Missing       0  \n",
+       "4                       -8.0                 Missing       0  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,16 +557,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(50000, 8)"
+       "(50000, 7)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
